--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,45 @@
 {
-  "name": "educa-brasil",
+  "name": "api-educabrasil",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "API para educabrasil",
+  "type": "module",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.ts",
+    "build": "esbuild src/lambda.ts --bundle --platform=node --target=node18 --outdir=dist --external:aws-sdk",
+    "start": "node dist/server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [],
+  "author": "HENRIQUE",
+  "license": "Proprietary",
   "dependencies": {
-    "@fastify/cors": "^11.1.0",
-    "@fastify/sensible": "^6.0.3",
-    "@fastify/swagger": "^9.5.1",
-    "@fastify/swagger-ui": "^5.2.3",
-    "fastify": "^5.6.1"
+    "@aws-sdk/client-s3": "^3.876.0",
+    "@aws-sdk/s3-request-presigner": "^3.876.0",
+    "@fastify/aws-lambda": "^5.1.4",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "fastify": "^5.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.1",
+    "pg": "^8.16.0",
+    "serverless-http": "^3.2.0",
+    "tsx": "^4.20.3",
+    "uuidv4": "^6.2.13",
+    "zod": "^4.0.15"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.152",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/luxon": "^3.7.1",
+    "@types/node": "^20.19.19",
+    "@types/pg": "^8.15.5",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
