--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,11 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+
+    "moduleResolution": "node",
+    "types": ["node", "aws-lambda"],
+    "typeRoots": ["./node_modules/@types"]
+  },
+  "include": ["src"]
 }
