--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,10 @@
   "name": "api-educabrasil",
   "version": "1.0.0",
   "description": "API para educabrasil",
-  "type": "module",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "build": "esbuild src/lambda.ts --bundle --platform=node --target=node18 --outdir=dist --external:aws-sdk",
+    "dev": "nodemon --watch src --ext ts,tsx --exec \"node -r ts-node/register src/server.ts\"",
+    "build": "tsc",
     "start": "node dist/server.js"
   },
   "keywords": [],
@@ -26,7 +25,6 @@
     "luxon": "^3.7.1",
     "pg": "^8.16.0",
     "serverless-http": "^3.2.0",
-    "tsx": "^4.20.3",
     "uuidv4": "^6.2.13",
     "zod": "^4.0.15"
   },
@@ -36,10 +34,11 @@
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/luxon": "^3.7.1",
-    "@types/node": "^20.19.21",
+    "@types/node": "^20.19.23",
     "@types/pg": "^8.15.5",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
